# Acoustic_Locating_VQ-VAE

./: Impulse_Response.py  README.md  Res_classes.py  Utilities.py  VQVAE_Images.py  VQVAE_class.py  VQVAE_speech.py  convolutional_vq_vae.py  main.py  pyproject.toml  sound_test.ipynb  sout_test.py  train_rir.py
BasedOnVQ-VAE-Speech/: convolutional_encoder.py  convolutional_vq_vae.py  deconvolutional_decoder.py  entry.py  main.py  model.pt  requirements.txt  sout_test.py  train_rir.py  vector_quantizer.py
BasedOnVQ-VAE-Speech/modules/: residual.py
models/: model.pt  model_300k_iters_st.pt  model_echoed_speech.pt  model_rir.pt  model_speech.pt  model_st.pt
modules/: residual_stack.py
rir_dataset_generator/: genereate_dataset.py  handle_rir_dataset_example.ipynb  requirements.txt  rir_dataset.py  test_data_set.py
scratch_scripts/: Impulse_Response.py  handle_rir_dataset_example.ipynb  sound_from_datapoint.ipynb  sound_test.ipynb  sout_test.py
scripts/: Final_net.py  compare_location_models.py  echoe_transfer.py  echoed_speech_model.py  encoder_training_echoed_model.py  generate_echoed_signals.py  genereate_dataset.py  location_from_echoed_signal.py  main.py  model_rir.pt  test_data_set.py  tmp.py  train_echoed_speech.py  train_locating_model.py  train_location.py  train_rir.py  train_speech.py
src/acoustic_locating_vq_vae/: data_preprocessing.py
src/acoustic_locating_vq_vae/rir_dataset_generator/: rir_dataset.py  specsdataset.py  speech_dataset.py
src/acustic_locating_vq_vae/: data_preprocessing.py  visualization.py
(+16 files in other folders)
